ИнтерфейсPythonПоиск/PyQt/ex6/ANTLR4 для Python/ANTLR4/STFileParser.py
# Generated from STFile.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from STFileParserExtensions import STFileParserExtensions
import sys
#if sys.version_info[1] > 5:
from typing import TextIO
#else:
#	from typing.io import TextIO


class STFileParser ( Parser ):
    #имя файла грамматики, на основе которого был сгенерирован данный парсер
    #Это как комментарий "я создан из STFile.g4"
    grammarFileName = "STFile.g4"

    '''
    Десериализатор ATN восстанавливает структуру автоматов из сериализованного формата.
    ATN (Augmented Transition Network)
    Это внутренний конечный автомат, который ANTLR использует для разбора текста. 
    По сути — "мозг" парсера, содержащий все возможные пути разбора согласно грамматике.

    serializedATN()
    Возвращает зашифрованное представление ATN в виде массива чисел 
    (вы видите его в коде как [4,1,11,87,2,0,...]). Это компактный формат для хранения графа состояний автомата.

    ATNDeserializer().deserialize()
    Преобразует этот массив чисел обратно в рабочий ATN-автомат. Процесс:
        Берется сгенерированный массив чисел.
        Восстанавливается граф состояний (ноды, переходы, решения).
        Парсер использует этот граф для анализа входного текста.

    Аналогия:
        serializedATN — это ZIP-архив с инструкциями для парсера.
        deserialize — это распаковка архива в готовую карту, по которой парсер будет двигаться.    
    '''
    atn = ATNDeserializer().deserialize(serializedATN())         # Восстанавливаем автомат

    '''
    строка создаёт массив детерминированных конечных автоматов (DFA)
    ?предсказывает пути разбора для точек принятия решений?

    atn.decisionToState
    Это массив точек принятия решений (decision points) из ATN. 
    Каждый элемент — состояние, где парсер должен выбрать между несколькими путями разбора 
    (например, между альтернативами в правиле entry).

    enumerate(atn.decisionToState)
    Проходит по всем элементам decisionToState, сохраняя их индекс i и значение ds.

    DFA(ds, i)
    Для каждой точки принятия решений создаёт детерминированный конечный автомат (DFA), который:
        Кэширует возможные пути разбора для этой точки.
        Ускоряет парсинг, избегая повторных вычислений.
    '''
    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]  # Оптимизация

    '''
    создаёт кэш контекстов предсказания
    Что такое Prediction Context?
    Это объект, который хранит:
        Текущее состояние парсера (какие правила активны)
        Путь разбора (где мы находимся в грамматике)

    Парсер постоянно:
        Создаёт новые PredictionContext при входе в правила
        Сравнивает контексты при backtracking
        Уничтожает их после использования
    Кэш решает 3 проблемы:
        Уменьшает потребление памяти (переиспользует объекты)
        Ускоряет сравнение контекстов (через хеширование)
        Позволяет DFA работать эффективнее    
    '''
    sharedContextCache = PredictionContextCache()

    '''
    определяет литеральные (текстовые) представления токенов в  грамматике

    Назначение literalNames
    Это массив, где:
        Каждый элемент соответствует типу токена (по его номеру)
        Содержит текстовое представление этого токена для отладки и ошибок
    Соответствие грамматике    
        Индекс	Значение	   Соответствие в грамматике
        ------  ------------   ---------------------------------
            0	"<INVALID>"	    Специальное значение для ошибок
            1	"'1'"	        Литерал '1' в fileStructure
            2	"','"	        Запятая как разделитель
            3	"'0'"	        Литерал '0' в entry
            4	"'\\uFEFF'"	    BOM-символ
            5-8	"<INVALID>"	    Зарезервировано для WORD, INT и др.
            9	"'{'"	        Токен LBRACE
            10	"'}'"	        Токен RBRACE
    Как это используется?
        a) Формирование читаемых ошибок   Когда парсер встречает неожиданный токен, 
                он использует literalNames для понятного сообщения: "ожидалась '{' в строке 5"
        b) Отладочный вывод
                При логировании парсер подставляет текстовые значения:  
                                    print(f"Текущий токен: {literalNames[token.type]}")
                                    # Для токена '}' выведет: Текущий токен: '}'      
        c) Сравнение токенов  Внутри семантических предикатов: if token.text == literalNames[1]:  # Проверка на '1'
                                                                    return True
    Почему есть <INVALID>?
        Индексы 0, 5-8 помечены как невалидные, потому что:
        0 — специальный код для нераспознанных токенов
        5-8 — соответствуют токенам WORD, INT, STRING, SYMBOL, которые не являются литералами (их текст динамический)     
    Пример:
        Для входных данных {1, {4, {"Folder"...}}:
        Парсер встречает { → берёт его текстовое представление из literalNames[9]
        Далее '1' → literalNames[1]
        Запятая → literalNames[2]                                   
    '''
    literalNames = [ "<INVALID>", "'1'", "','", "'0'", "'\\uFEFF'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{'", "'}'" ]

    '''
    
    '''
    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOM", "WORD", "INT", "STRING", "SYMBOL", "LBRACE", 
                      "RBRACE", "WS" ]
    '''
    
    '''
    RULE_fileStructure = 0
    RULE_rootContent = 1
    RULE_folderContent = 2
    RULE_nestedEntries = 3
    RULE_entry = 4
    RULE_headerContent = 5
    RULE_folderHeader = 6
    RULE_forceInt = 7

    '''
    
    '''
    ruleNames =  [ "fileStructure", "rootContent", "folderContent", "nestedEntries", 
                   "entry", "headerContent", "folderHeader", "forceInt" ]

    '''
    
    '''
    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BOM=4
    WORD=5
    INT=6
    STRING=7
    SYMBOL=8
    LBRACE=9
    RBRACE=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileStructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(STFileParser.LBRACE, 0)

        def rootContent(self):
            return self.getTypedRuleContext(STFileParser.RootContentContext,0)


        def RBRACE(self):
            return self.getToken(STFileParser.RBRACE, 0)

        def getRuleIndex(self):
            return STFileParser.RULE_fileStructure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileStructure" ):
                listener.enterFileStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileStructure" ):
                listener.exitFileStructure(self)




    def fileStructure(self):

        localctx = STFileParser.FileStructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fileStructure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(STFileParser.LBRACE)
            self.state = 17
            self.match(STFileParser.T__0)
            self.state = 18
            self.match(STFileParser.T__1)
            self.state = 19
            self.rootContent()
            self.state = 20
            self.match(STFileParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.count = None # ForceIntContext

        def LBRACE(self):
            return self.getToken(STFileParser.LBRACE, 0)

        def folderContent(self):
            return self.getTypedRuleContext(STFileParser.FolderContentContext,0)


        def RBRACE(self):
            return self.getToken(STFileParser.RBRACE, 0)

        def forceInt(self):
            return self.getTypedRuleContext(STFileParser.ForceIntContext,0)


        def getRuleIndex(self):
            return STFileParser.RULE_rootContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootContent" ):
                listener.enterRootContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootContent" ):
                listener.exitRootContent(self)




    def rootContent(self):

        localctx = STFileParser.RootContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rootContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(STFileParser.LBRACE)
            self.state = 23
            localctx.count = self.forceInt()
            self.state = 24
            self.match(STFileParser.T__1)
            self.state = 25
            self.folderContent()
            self.state = 26
            self.match(STFileParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FolderContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def folderHeader(self):
            return self.getTypedRuleContext(STFileParser.FolderHeaderContext,0)


        def nestedEntries(self):
            return self.getTypedRuleContext(STFileParser.NestedEntriesContext,0)


        def getRuleIndex(self):
            return STFileParser.RULE_folderContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFolderContent" ):
                listener.enterFolderContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFolderContent" ):
                listener.exitFolderContent(self)




    def folderContent(self):

        localctx = STFileParser.FolderContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_folderContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.folderHeader()
            self.state = 29
            self.match(STFileParser.T__1)
            self.state = 30
            self.nestedEntries()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NestedEntriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STFileParser.EntryContext)
            else:
                return self.getTypedRuleContext(STFileParser.EntryContext,i)


        def getRuleIndex(self):
            return STFileParser.RULE_nestedEntries

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNestedEntries" ):
                listener.enterNestedEntries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNestedEntries" ):
                listener.exitNestedEntries(self)




    def nestedEntries(self):

        localctx = STFileParser.NestedEntriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nestedEntries)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.entry()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 33
                self.match(STFileParser.T__1)
                self.state = 34
                self.entry()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.count = None # ForceIntContext
            self.header = None # HeaderContentContext

        def LBRACE(self):
            return self.getToken(STFileParser.LBRACE, 0)

        def nestedEntries(self):
            return self.getTypedRuleContext(STFileParser.NestedEntriesContext,0)


        def RBRACE(self):
            return self.getToken(STFileParser.RBRACE, 0)

        def forceInt(self):
            return self.getTypedRuleContext(STFileParser.ForceIntContext,0)


        def headerContent(self):
            return self.getTypedRuleContext(STFileParser.HeaderContentContext,0)


        def getRuleIndex(self):
            return STFileParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = STFileParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entry)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(STFileParser.LBRACE)
                self.state = 41
                localctx.count = self.forceInt()
                self.state = 42
                self.match(STFileParser.T__1)
                self.state = 43
                localctx.header = self.headerContent()
                self.state = 44
                self.match(STFileParser.T__1)
                self.state = 45
                self.nestedEntries()
                self.state = 46
                self.match(STFileParser.RBRACE)
                self.state = 47
                if not STFileParserExtensions.isFolder(localctx.header.type_, localctx.header.flags):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "STFileParserExtensions.isFolder($header.type, $header.flags)")
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(STFileParser.LBRACE)
                self.state = 50
                self.match(STFileParser.T__2)
                self.state = 51
                self.match(STFileParser.T__1)
                self.state = 52
                localctx.header = self.headerContent()
                self.state = 53
                self.match(STFileParser.RBRACE)
                self.state = 54
                if not STFileParserExtensions.isTemplate(localctx.header.type_, localctx.header.flags):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "STFileParserExtensions.isTemplate($header.type, $header.flags)")
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None
            self.flags = None
            self.name = None # Token
            self.t_type = None # Token
            self.f_flags = None # Token
            self.param1 = None # Token
            self.param2 = None # Token

        def LBRACE(self):
            return self.getToken(STFileParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(STFileParser.RBRACE, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(STFileParser.STRING)
            else:
                return self.getToken(STFileParser.STRING, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(STFileParser.INT)
            else:
                return self.getToken(STFileParser.INT, i)

        def getRuleIndex(self):
            return STFileParser.RULE_headerContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderContent" ):
                listener.enterHeaderContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderContent" ):
                listener.exitHeaderContent(self)




    def headerContent(self):

        localctx = STFileParser.HeaderContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_headerContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(STFileParser.LBRACE)
            self.state = 59
            localctx.name = self.match(STFileParser.STRING)
            self.state = 60
            self.match(STFileParser.T__1)
            self.state = 61
            localctx.t_type = self.match(STFileParser.INT)
            self.state = 62
            self.match(STFileParser.T__1)
            self.state = 63
            localctx.f_flags = self.match(STFileParser.INT)
            self.state = 64
            self.match(STFileParser.T__1)
            self.state = 65
            localctx.param1 = self.match(STFileParser.STRING)
            self.state = 66
            self.match(STFileParser.T__1)
            self.state = 67
            localctx.param2 = self.match(STFileParser.STRING)
            self.state = 68
            self.match(STFileParser.RBRACE)

            # Присваиваем возвращаемые значения
            localctx.type_ =  (None if localctx.t_type is None else localctx.t_type.text)
            localctx.flags =  (None if localctx.f_flags is None else localctx.f_flags.text)
                
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FolderHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.empty1 = None # Token
            self.empty2 = None # Token

        def LBRACE(self):
            return self.getToken(STFileParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(STFileParser.RBRACE, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(STFileParser.STRING)
            else:
                return self.getToken(STFileParser.STRING, i)

        def getRuleIndex(self):
            return STFileParser.RULE_folderHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFolderHeader" ):
                listener.enterFolderHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFolderHeader" ):
                listener.exitFolderHeader(self)




    def folderHeader(self):

        localctx = STFileParser.FolderHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_folderHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(STFileParser.LBRACE)
            self.state = 72
            localctx.name = self.match(STFileParser.STRING)
            self.state = 73
            self.match(STFileParser.T__1)
            self.state = 74
            self.match(STFileParser.T__0)
            self.state = 75
            self.match(STFileParser.T__1)
            self.state = 76
            self.match(STFileParser.T__2)
            self.state = 77
            self.match(STFileParser.T__1)
            self.state = 78
            localctx.empty1 = self.match(STFileParser.STRING)
            self.state = 79
            self.match(STFileParser.T__1)
            self.state = 80
            localctx.empty2 = self.match(STFileParser.STRING)
            self.state = 81
            self.match(STFileParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForceIntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(STFileParser.INT, 0)

        def getRuleIndex(self):
            return STFileParser.RULE_forceInt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForceInt" ):
                listener.enterForceInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForceInt" ):
                listener.exitForceInt(self)




    def forceInt(self):

        localctx = STFileParser.ForceIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forceInt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            if not STFileParserExtensions.isInteger(self._input.LT(1).text):
                from antlr4.error.Errors import FailedPredicateException
                raise FailedPredicateException(self, "STFileParserExtensions.isInteger(_input.LT(1).text)")
            self.state = 84
            self.match(STFileParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    #автоматически вызывают предикаты
    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.entry_sempred
        self._predicates[7] = self.forceInt_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def entry_sempred(self, localctx:EntryContext, predIndex:int):
            if predIndex == 0:
                return STFileParserExtensions.isFolder(localctx.header.type_, localctx.header.flags)
         

            if predIndex == 1:
                return STFileParserExtensions.isTemplate(localctx.header.type_, localctx.header.flags)
         

    def forceInt_sempred(self, localctx:ForceIntContext, predIndex:int):
            if predIndex == 2:
                return STFileParserExtensions.isInteger(self._input.LT(1).text)
         




